@@ -1,5 +1,8 @@
 2006-12-14  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
+	* SoObjects/SOGo/SOGoPermissions.[hm]: new module that extends the
+	values from SoPermissions with ones specific to SOGo.
+
 	* SoObjects/SOGo/SOGoAclsFolder.[hm]: new class module that
 	handles the storage for the acls.
 
